<resources>
    <string name="app_name">Maderkit</string>
    <string name="title_home">Catágolo</string>
    <string name="title_dashboard">Scan</string>
    <string name="title_notifications">Tendencias</string>
    <string name="bienvenida">¡Descubre la manera más divertida de personalizar tu espacio!</string>
    <string name="continuar"><u>Continuar sin registro</u></string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Regístrate</string>
    <string name="nombre">Maderkit</string>
    <string name="bienvenido">Bienvenidos</string>
    <string name="forgetPassword"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="habitacion">Habitación</string>
    <string name="estudios">Estudio</string>
    <string name="mesas">Cocina</string>
    <string name="entretenimiento">Entretenimiento</string>
    <string name="puertas">Puertas plegables</string>
    <string name="auth_failed">Lo sentimos, tu usuario no se ha podido registrar</string>
    <string name="confirmar">Las contraseñas ingresadas no coinciden</string>
    <string name="detail_image">Producto Maderkit en vista detallada</string>
    <string name="search">Buscar</string>
    <string name="user_profile">Perfil usuario</string>
    <string name="shortPassword">La contraseña debe tener más de 6 caracteres</string>
    <string name="wrongEmail">El correo ingresado no es válido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="casa">Casa</string>

</resources>
