<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sevillano.proto_2.Feed">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp">

        <HorizontalScrollView
            android:id="@+id/filtrar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/casa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:background="@color/filtros"
                    android:gravity="center"
                    android:onClick="filtrar"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/casa"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/habitacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:background="@color/filtros"
                    android:gravity="center"
                    android:onClick="filtrar"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/habitacion"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/estudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:background="@color/filtros"
                    android:gravity="center"
                    android:onClick="filtrar"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/estudios"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/entretenimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:background="@color/filtros"
                    android:gravity="center"
                    android:onClick="filtrar"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/entretenimiento"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cocina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:background="@color/filtros"
                    android:gravity="center"
                    android:onClick="filtrar"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/mesas"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/puertas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:background="@color/filtros"
                    android:gravity="center"
                    android:onClick="filtrar"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/puertas"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <!-- CIERRE DE FILTROS -->
            </LinearLayout>
        </HorizontalScrollView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/producticos"
            android:layout_width="match_parent"
            android:layout_height="463dp"
            android:layout_marginTop="1dp"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintTop_toBottomOf="@+id/filtrar"
            app:layout_constraintVertical_weight="5"
            tools:context="com.example.sevillano.proto_2.Feed"
            tools:listitem="@layout/fragment_feed" />


    </android.support.constraint.ConstraintLayout>
</FrameLayout>
